create_webserver_instance.tf
terraform {
    required_providers {
        aws = {
            source  = "hashicorp/aws"
            version = "~> 2.70"
        }
    }
}

provider "aws" {
    profile = "default"
    region  = "us-east-1"
}

resource "aws_instance" "webserver" {
    ami = "ami-049f3725664f54adb"
    instance_type = "t2.micro"
    key_name = "webserver"
    security_groups = [ "webserver" ]
    tags = {
      Name = "webserver"
    }
}

resource "aws_security_group" "webserver" {
    name        = "webserver"
    description = "Allow SSH and HTTP(S) traffic"
    
    ingress {
        description = "HTTP from VPC"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    ingress {
        description = "HTTPS from VPC"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "SSH from VPC"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "webserver"
    }
}

resource "aws_eip_association" "eip_assoc" {
    instance_id   = aws_instance.webserver.id
    allocation_id = aws_eip.webserver.id
}

resource "aws_eip" "webserver" {
    vpc = true
    tags = {
        Name = "webserver"
    }
}
